FO-1863: Fikser layout issues på mobil.

--- a/src/components/banner/Banner.less
+++ b/src/components/banner/Banner.less
@@ -4,6 +4,7 @@
   position: relative;
   z-index: 1;
   display: flex;
+  flex: none;
   align-items: center;
   justify-content: center;
   height: 4rem;
