--- a/src/components/stillingsinfo/StillingInfo.less
+++ b/src/components/stillingsinfo/StillingInfo.less
@@ -51,6 +51,7 @@
   #mitt-behov-knapp {
     .centerContent();
     padding-bottom: 3rem;
+    flex: none;
   }
 
   @media (min-width: @screen-md-min) {
